<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".ui.activity.MainActivity">

    <TextView
        android:id="@+id/applicationName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_gravity="center"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white"
        android:textSize="60sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/galleryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/applicationName"
        android:layout_alignRight="@+id/applicationName"
        android:layout_below="@+id/applicationName"
        android:layout_marginTop="59dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:drawableTop="@drawable/ic_gallery"
        android:text="@string/gallery"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/cameraButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/galleryButton"
        android:layout_alignBottom="@+id/galleryButton"
        android:layout_alignLeft="@+id/applicationName"
        android:layout_alignStart="@+id/applicationName"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:drawableTop="@drawable/ic_camera"
        android:text="@string/camera"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/applicationIcon"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_above="@+id/applicationName"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginBottom="40dp"
        android:src="@drawable/application_icon" />

</RelativeLayout>
